# substitiute_prototype

./: 10_copy_files_to_calc_directory.py  20_add_fake_data.py  20_increase_data.py  30_generate_subs.py  30_show_db.py  40_fakevasprun.py  40_generate_subs.py  50_fakevaspresult.py  50_fakevasprun.py  60_retieve_vaspresult.py  60_vaspresult.py  90_show_collection.py  95_remove_collection.py  README.md  fakevasprun.py  requirements.txt  runall.sh  setup.cfg  setup.py  subsMat.py  subs_mat.py
Calc/MGI/mp-11262_YbAu4/: _uuid
Calc/MGI/mp-11375_EuHg/: _uuid
Calc/MGI/mp-11422_GdHg/: _uuid
Calc/MGI/mp-11427_GdPd/: _uuid
Calc/MGI/mp-11428_GdPt/: _uuid
Calc/MGI/mp-11577_YbZn/: _uuid
Calc/MGI/mp-1261_EuZn/: _uuid
Calc/MGI/mp-1422_GdPt2/: _uuid
Calc/MGI/mp-1436_EuAg2/: _uuid
Calc/MGI/mp-1584_YbIr2/: _uuid
Calc/MGI/mp-1607_YbCu5/: _uuid
Calc/MGI/mp-1665_YbFe2/: _uuid
Calc/MGI/mp-1703_YbZn/: _uuid
Calc/MGI/mp-183_CeCd/: _uuid
Calc/MGI/mp-1854_EuPd2/: _uuid
Calc/MGI/mp-1857_YbCd/: _uuid
Calc/MGI/mp-19783_GdAg2/: _uuid
Calc/MGI/mp-1980_YbNi2/: _uuid
Calc/MGI/mp-20084_GdRh2/: _uuid
Calc/MGI/mp-20089_GdFe2/: _uuid
Calc/MGI/mp-20272_GdPt3/: _uuid
Calc/MGI/mp-20719_EuHg2/: _uuid
Calc/MGI/mp-21305_GdNi5/: _uuid
Calc/MGI/mp-22077_Gd3Pd2/: _uuid
sample/: 10_copy_files_to_calc_directory.py  20_add_fake_data.py  30_generate_subs.py  40_fakevasprun.py  50_fakevaspresult.py  60_retieve_vaspresult.py  90_show_collection.py  95_remove_collection.py  runall.sh
src/subsMat/: misc.py
subsMat/: database.py  fakenode.py  misc.py  node.py  structure.py
(+366 files in other folders)
