[metadata]
name = subsMat
version = attr: subsMat.__version__
license = Apache License 2.0
description = prototype substitute element calculation
author = Hiori Kino
url = https://github.com/nim-hrkn/substitiute_prototype
packages = [subsMat]
install_requires = 
  pymatgen
  pymongo

[options]
zip_safe = False

