[metadata]
name = subsMat
version = attr: subsMat.__version__
license = Apache License 2.0
description = prototype substitute element calculation
author = Hiori Kino
url = https://github.com/nim-hrkn/substitiute_prototype

[options]
install_requires = 
  pymatgen
  pymongo
zip_safe = False
packages = subsMat
